[package]
name = "VRC_Files_Manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
eframe = "0.32.1"
egui = "0.32.1"
open = "5.3.2"
rfd = "0.15.4"
walkdir = "2.5.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rusqlite = { version = "0.37.0", optional = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[build-dependencies]
cc = "1.2.33"
